objects/CS007_StaticValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DECEMBER RELEASE – Stores the list of Static Field ids</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>DECEMBER RELEASE - Stores the Description of the value.</description>
        <inlineHelpText>what the value field is used for?</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>DECEMBER RELEASE - Stores the reference where the static string is used.</description>
        <inlineHelpText>Where it is used/ Referenced</inlineHelpText>
        <label>Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <description>DECEMBER RELEASE - Stores the Static value.</description>
        <label>Values</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CS007_StaticValues</label>
</CustomObject>